syntax = "proto2";

import "core.proto";

enum lsmtype {
	NO_LSM		= 0;
	SELINUX		= 1;
	APPARMOR	= 2;
}

message inventory_entry {
	required uint32			img_version	= 1;
	optional bool			fdinfo_per_id	= 2;
	optional task_kobj_ids_entry	root_ids	= 3;
	optional bool			ns_per_id	= 4;
	optional uint32			root_cg_set	= 5;
	optional lsmtype		lsmtype		= 6;
	optional bool			check_only	= 7;
}
